Fixed minor burger-menu mistake
I made sure the cross icon in the open burger-menu was placed exactly on top of the burger-icon. It wasn't before because one value used vw, and the other used %. That made the mistake, cause the different devices has different width scrollbars.

--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -98,7 +98,7 @@ nav {
 
   .burger-menu {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     background-color: $color-navy; // Deep dark blue
     position: fixed;
     z-index: 100;
@@ -122,7 +122,7 @@ nav {
       position: absolute;
       top: 0;
       height: 6.5vh;
-      right: 55px;
+      right: 40px;
       display: flex;
       align-items: center;
 
@@ -204,7 +204,7 @@ nav {
       font-size: 1.8rem;
       top: 0;
       height: 5.5vh;
-      right: 35px;
+      right: 20px;
     }
 
     ul {
